@startuml
class UpdateScreenProfileCommand {
    + Id : int <<get>>
    + ScreenProfile : UpdateScreenProfileDto <<get>>
    + UpdateScreenProfileCommand(id:int, screenProfile:UpdateScreenProfileDto)
}
"IRequest`1" "<ScreenProfileDto>" <|-- UpdateScreenProfileCommand
UpdateScreenProfileCommand ..> UpdateScreenProfileDto: <<use>>
class UpdateScreenProfileDto {
    + Name : string <<get>> <<set>>
}
@enduml